<resources>
    <string name="app_name">Sugilite</string>
    <string name="action_settings">Settings</string>
    <string name="accessibility_service_description">Accessibility service for Sugilite - CMU HCII</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_recording_in_progress">Automation Recording in Progress</string>
    <string name="pref_description_recording_in_progress">Recording UI Interactions</string>

    <string name="pref_title_tracking_in_progress">Background Tracking in Progress</string>
    <string name="pref_description_tracking_in_progress">Tracking UI Interactions in Background</string>

    <string name="pref_title_display_name">Participant ID</string>
    <string name="pref_script_name_display_name">Script Name</string>
    <string name="pref_default_display_name">DEFAULT_ID</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_recoding">Script Sharing Settings</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_background_tracking">Background Tracking Settings</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_communication_interface">CommunicationInterfaceActivity</string>
    <string name="accessibility_service_name">Sugilite - InMind</string>





    <string name="loading_script_message">Reading the script...\n</string>
    <string name="loading_file_message">Loading the script file...\n</string>
    <string name="loading_kb_message">Loading the KB file...\n</string>
    <string name="loading_sovite_dump_message">Loading the Sovite dump file...\n</string>
    <string name="saving_script_message">Saving the script...\n</string>
    <string name="saving_sovite_dump_message">Saving the Sovite dump file...\n</string>
    <string name="downloading_script_message">Downloading the script...\n</string>
    <string name="loading_remote_script_list_message">Loading the list from the server...\n</string>
    <string name="uploading_script_message">Uploading the script...\n</string>
    <string name="prepareing_script_execution_message">Preparing the script execution...\n</string>
    <string name="processing_query_message">Processing the query...\n</string>
    <string name="filtering_personal_information_message">Filtering personal information...\n</string>

    <string name="ask_new_fork_message">Please give your condition for the new fork.\n</string>
    <string name="ask_else_fork_message">Would you like to do something if the condition is not fulfilled?\n</string>



</resources>
