<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:key="recording_in_process"
        android:title="@string/pref_title_recording_in_progress"
        android:summary="@string/pref_description_recording_in_progress"
        android:defaultValue="false" />

    <SwitchPreference
        android:key="tracking_in_process"
        android:title="@string/pref_title_tracking_in_progress"
        android:summary="@string/pref_description_tracking_in_progress"
        android:defaultValue="false" />


    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:key="scriptName"
        android:title="@string/pref_script_name_display_name"
        android:defaultValue="New Script"
        android:selectAllOnFocus="true"
        android:inputType="textCapWords"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />

    <EditTextPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:capitalize="words"
        android:defaultValue="http://35.207.16.161:4567/semparse"
        android:inputType="textNoSuggestions"
        android:key="semantic_parsing_server_address"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="Semantic Parsing Server Address" />

    <EditTextPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:capitalize="words"
        android:defaultValue="http://35.207.16.161:5000/get_closest_embeddings"
        android:inputType="textNoSuggestions"
        android:key="bert_embedding_server_address"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="Text Embedding Server Address" />

    <SwitchPreference
        android:key="root_enabled"
        android:title="[Advanced] Enable Root Access"
        android:summary="Grant Sugilite root access to your phone. It's needed for the graphic preview of the script."
        android:defaultValue="false" />


    <SwitchPreference
        android:key="broadcasting_enabled"
        android:title="Allow Acessiblity Event Broadcastring"
        android:summary="Allow third-party apps to listen to Sugilite events"
        android:defaultValue="false" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->

</PreferenceScreen>
